zfarrell -- address issues found by checkstyles and eclipse warnings
git-tfs-id: [https://tfsnpt.int.thomson.com:443/tfs/Cobalt_Collection/]$/Cobalt eBook Builder/Development;C868699